[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["klesun <arturklesun@gmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/yourgithubusername/hello-wasm"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.6"
rand = { version = "0.6.5", features = ["wasm-bindgen"] }
